--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,16 @@ body {
     padding-top : 2px;
   }
   
-  .description{
+  .description {
     border       : 1px solid black;
     padding-left : 5px;
     padding-top  : 2px;
+  }
+
+  .main-pop-up {
+    position : absolute;
+    top      : 0;
+    width    : 100%;
+    height     : 100%;
+    background : rgba(64, 64, 66, 0.45);
   }
